--- a/main/resources/templates/fragments/navbar.html
+++ b/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
         xmlns:th="http://www.thymeleaf.org">
+
 <head>
 </head>
 
@@ -25,7 +26,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/offers/all">All Offers</a>
                 </li>
-                <li class="nav-item dropdown">
+
+                <li th:if="${@currentUser.isAdmin()}" class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
