--- a/main/resources/templates/details.html
+++ b/main/resources/templates/details.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <head>
      <meta charset="UTF-8">
@@ -41,8 +41,12 @@
                 </li>
             </ul>
             <div class="card-body">
-                <a class="card-link" href="/">Update</a>
-                <a class="card-link" href="/">Delete</a>
+                <div  class="row" >
+                    <a class="btn btn-link" href="/">Update</a>
+                    <form th:action="@{/offers/{id}(id=*{id})}" th:method="delete">
+                        <input type="submit" class="btn btn-link" value="Delete"/>
+                    </form>
+                </div>
             </div>
         </div>
         <div  th:object="${offer}"
