--- a/main/resources/templates/details.html
+++ b/main/resources/templates/details.html
@@ -41,8 +41,9 @@
                 </li>
             </ul>
             <div class="card-body">
-                <div  class="row" >
-                    <a class="btn btn-link" href="/">Update</a>
+                <div class="row" >
+                    <a class="btn btn-link" th:href="@{/offers/{id}/edit(id=*{id})}">Update</a>
+
                     <form th:action="@{/offers/{id}(id=*{id})}" th:method="delete">
                         <input type="submit" class="btn btn-link" value="Delete"/>
                     </form>
