--- a/main/resources/templates/details.html
+++ b/main/resources/templates/details.html
@@ -35,6 +35,7 @@
                     <div class="card-text"><span th:text="|Price: *{price}|">Price</span></div>
                     <div class="card-text"><span th:text="|Engine type: *{engine}|">• Engine type</span></div>
                     <div class="card-text"><span th:text="|Transmission: *{transmission}|">Transmission type</span></div>
+                    <div class="card-text"><span th:text="|Description: *{description}|">Description</span></div>
                     <div class="card-text"><span th:text="|Offer created: *{created}|">Offer created</span></div>
                     <div class="card-text"><span th:text="|Offer modified: *{modified}|">Offer modified</span></div>
                     <div class="card-text"><span th:text="|Seller: *{firstName}  *{lastName}|">Seller - First and Last name</span></div>
