--- a/main/resources/templates/offer-add.html
+++ b/main/resources/templates/offer-add.html
@@ -107,7 +107,7 @@
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="mileage" class="text-white font-weight-bold">Mileage</label>
-                <input id="mileage" type="number" min="0" max="900000" step="1000"
+                <input id="mileage" type="number" step="1000"
                        class="form-control"
                        placeholder="Mileage in kilometers"/>
                 <p class="errors alert alert-danger">
