Configure the login and logout.

--- a/main/resources/templates/fragments/navbar.html
+++ b/main/resources/templates/fragments/navbar.html
@@ -26,8 +26,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/offers/all">All Offers</a>
                 </li>
-
-                <li th:if="${@currentUser.isAdmin()}" class="nav-item dropdown">
+                <!--Todo ? -->
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
@@ -39,19 +39,20 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-
-                <li th:if="${@currentUser.isLoggedIn()}" class="nav-item">
+                <!-- TODO: -->
+                <li class="nav-item">
                     <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div>"Welcome, <th:block th:text="${@currentUser.getFirstName()}"></th:block>
-                        </div>
+                        <!-- TODO -->
+                        <div>"Welcome, </div>
                         <a class="nav-link" th:href="@{/users/logout}">Logout</a>
                     </div>
                 </li>
-
-                <li th:unless="${@currentUser.isLoggedIn()}" class="nav-item">
+                <!-- TODO: -->
+                <li class="nav-item">
                     <a class="nav-link" href="/users/register">Register</a>
                 </li>
-                <li th:unless="${@currentUser.isLoggedIn()}" class="nav-item">
+                <!-- TODO: -->
+                <li class="nav-item">
                     <a class="nav-link" href="/users/login">Login</a>
                 </li>
 
