--- a/main/resources/templates/fragments/navbar.html
+++ b/main/resources/templates/fragments/navbar.html
@@ -47,7 +47,7 @@
                         <div>"Welcome, <th:block sec:authentication="name"></th:block>! </div>
 
                         <form th:action="@{/users/logout}" th:method="post">
-                            <input class="nav-link" type="submit" value="Logout">
+                            <input class="btn btn-link nav-link"  type="submit" value="Logout">
                         </form>
                     </div>
                 </li>
