--- a/main/resources/templates/offer-add.html
+++ b/main/resources/templates/offer-add.html
@@ -23,34 +23,46 @@
     <h2 class="text-center text-white">Upload Offer</h2>
     <form   th:action="@{/offers/add}"
             th:method="post"
+            th:object="${addOfferBindingModel}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
 
             <div class="form-group col-md-6 mb-3">
-                <label class="text-center text-white font-weight-bold" for="model">Model</label>
+                <label class="text-center text-white font-weight-bold" for="id">Model</label>
                 <select
-                        name="model"
-                        id="model"
+                        name="id"
+                        id="id"
+                        th:errorclass="is-invalid"
                         class="form-control">
                     <option value="">- Select a model -</option>
-                    <optgroup label="Brand name">
+                    <optgroup
+                                th:each="brand : ${brands}"
+                                th:label="${brand.name}" >
                         <option
-                                th:each="modelName : ${models}"
-                                th:value="${modelName}"
-                                th:text="${modelName}"
-                        >Model</option>
+                                th:each="model : ${brand.models}"
+                                th:text="${model.name}"
+                                th:value="${model.id}"
+                                th:selected="*{id} == ${model.id}">Model
+                        </option>
                     </optgroup>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Vechicle model is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="price" class="text-white font-weight-bold">Price</label>
-                <input id="price" type="number" min="0" step="100" class="form-control"
+                <input
+                        id="price"
+                        th:field="*{price}"
+                        th:errorclass="is-invalid"
+                        type="number"
+                        min="0"
+                        step="100"
+                        class="form-control"
                        placeholder="Suggested price"/>
-                <p  class="errors alert alert-danger">
-                    Suggested price is required.
+                <p  class="invalid-feedback errors alert alert-danger">
+                    Suggested price is required and cannot be a negative number.
                 </p>
             </div>
         </div>
@@ -59,6 +71,7 @@
                 <label class="text-center text-white font-weight-bold" for="engine">Engine</label>
                 <select
                         name="engine"
+                        th:errorclass="is-invalid"
                         id="engine"
                         class="form-control">
                     <option value="">- Select engine type -</option>
@@ -71,16 +84,16 @@
                         Engine type
                     </option>
                 </select>
-                <p class=" errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Engine type is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="transmission">Transmission</label>
                 <select
-
                         id="transmission"
-
+                        name="transmission"
+                        th:errorclass="is-invalid"
                         class="form-control">
                     <option value="">- Select transmission type -</option>
                     <option
@@ -91,7 +104,7 @@
                     > Transmission type
                     </option>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Transmission type is required.
                 </p>
             </div>
@@ -99,36 +112,56 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label for="year" class="text-white font-weight-bold">Year</label>
-                <input id="year" type="number" min="1900" max="2099" step="1" class="form-control"
+                <input
+                        id="year"
+                        th:field="*{year}"
+                        th:errorclass="is-invalid"
+                        type="number"
+                        step="1"
+                        class="form-control"
                        placeholder="Manufacturing year"/>
-                <p class="errors alert alert-danger">
-                    Manufacturing year is required.
+                <p class="invalid-feedback errors alert alert-danger">
+                    Manufacturing year is required and should be bigger than 1900.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="mileage" class="text-white font-weight-bold">Mileage</label>
-                <input id="mileage" type="number" step="1000"
+                <input
+                        id="mileage"
+                        th:field="*{mileage}"
+                        th:errorclass="is-invalid"
+                        type="number" step="1000"
                        class="form-control"
                        placeholder="Mileage in kilometers"/>
-                <p class="errors alert alert-danger">
-                    Mileage in kilometers is required.
+                <p class="invalid-feedback errors alert alert-danger">
+                    Mileage in kilometers is required and cannot be a negative number.
                 </p>
             </div>
         </div>
 
         <div class="form-group">
             <label class="text-white font-weight-bold" for="description">Description</label>
-            <textarea id="description" type="textarea" class="form-control" rows="3"
+            <textarea
+                    id="description"
+                    th:field="*{description}"
+                    th:errorclass="is-invalid"
+                    type="textarea"
+                    class="form-control" rows="3"
                       placeholder="Description"></textarea>
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Description is required.
             </p>
         </div>
         <div class="form-group">
             <label class="text-white font-weight-bold" for="imageUrl">Image URL</label>
-            <input id="imageUrl" type="url" class="form-control"
+            <input
+                    id="imageUrl"
+                    th:field="*{imageUrl}"
+                    th:errorclass="is-invalid"
+                    type="url"
+                    class="form-control"
                    placeholder="Put vehicle image URL here">
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Vehicle image URL is required.
             </p>
         </div>
